# ic_flutter_template

./: Cargo.toml  Makefile.toml  README.md  pubspec.yaml
lib/: main.dart
native/ic/: Cargo.toml
native/ic-ffi/: Cargo.toml  binding.h  build.rs
native/ic-ffi/src/: lib.rs
native/ic/src/: lib.rs
test/: widget_test.dart
