[package]
name = "ic"
version = "0.1.0"
authors = ["Andreas Koch <andreaskoch2222@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# we will use `rustls-tls` here since openssl is an issue when cross-compiling for Android/iOS
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
ring = "0.16.11"
ic-agent = { path = "../../../agent-rs/ic-agent" }